# handle_allocator

./: CMakeLists.txt
cmake/: handle_allocatorConfig.cmake.in
include/: handle.h  handle_allocator.h
include/handle_allocator/: handle.h  handle_allocator.h
test/: CMakeLists.txt  gtest_delete.cpp  gtest_get.cpp  gtest_handle.cpp  gtest_insert.cpp
